tui/tests/snapshots/editor_render_snapshots__snap_label_adjacent_hash_run.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"#tag#more\", 80)"
---
 0 |#tag#more                                                                       |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
