tui/tests/snapshots/editor_render_snapshots__snap_label_after_label_char.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"foo#bar baz\", 80)"
---
 0 |foo#bar baz                                                                     |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
