tui/tests/snapshots/editor_render_snapshots__snap_label_double_hash.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"##draft\", 80)"
---
 0 |##draft                                                                         |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
