tui/tests/snapshots/editor_render_snapshots__snap_label_in_paragraph.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"see #rust later\", 80)"
---
 0 |see #rust later                                                                 |
   0..4 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
   4..9 fg=Rgb(254, 128, 25) bg=Rgb(40, 40, 40) mods=BOLD
   9..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
