tui/tests/snapshots/editor_render_snapshots__snap_label_inside_fenced_block.snap
---
source: tui/tests/editor_render_snapshots.rs
expression: "painted(\"before\\n```\\n#inside\\n```\\nafter #outside\", 80)"
---
 0 |before                                                                          |
   0..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 1 |```                                                                             |
   0..7 fg=Rgb(235, 219, 178) bg=Rgb(50, 48, 47) mods=NONE
   7..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 2 |#inside                                                                         |
   0..7 fg=Rgb(235, 219, 178) bg=Rgb(50, 48, 47) mods=NONE
   7..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 3 |```                                                                             |
   0..7 fg=Rgb(235, 219, 178) bg=Rgb(50, 48, 47) mods=NONE
   7..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
 4 |after #outside                                                                  |
   0..6 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
   6..14 fg=Rgb(254, 128, 25) bg=Rgb(40, 40, 40) mods=BOLD
   14..80 fg=Rgb(235, 219, 178) bg=Rgb(40, 40, 40) mods=NONE
